fixed visibility issue

--- a/pages/cafeteria/style-special-menu-media-query.css
+++ b/pages/cafeteria/style-special-menu-media-query.css
@@ -20,7 +20,7 @@
 
    h1 {
       position: relative;
-      top: -3rem;
+      top: -6rem;
 
       text-align: center;
 
@@ -374,18 +374,18 @@
    }
 
    .pages {
-      top: 13rem;
+      top: 12rem;
 
       margin-top: 0rem;
       display: flex;
       justify-content: center;
-      gap: .8rem;
+      gap: 1rem;
       width: 100%;
 
       input {
          cursor: pointer;
-         width: 20px;
-         height: 20px;
+         width: 25px;
+         height: 25px;
          accent-color: #cd6d13;
       }
    }
