--- a/pages/cafeteria/style-special-menu.css
+++ b/pages/cafeteria/style-special-menu.css
@@ -20,6 +20,9 @@ html {
    height: 120vh;
 
    h1 {
+      position: relative;
+      top: -3rem;
+
       font-size: 32px;
       color: var(--dark-brow);
       line-height: 2rem;
@@ -378,7 +381,7 @@ html {
 
    .pages {
       position: absolute;
-      top: 5rem;
+      top: 4rem;
 
       margin-top: 4.5rem;
       display: flex;
